--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
     <script src="js.js"></script>
-    <title>Title</title>
+    <title>Temp Paste</title>
 </head>
 <body>
     <div class="flex-center">
