--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <script src="sweetalert2.all.min.js"></script>
     <script src="js.js"></script>
     <title>Temp Paste</title>
 </head>
